--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 yaml-rust = "0.4"
-serde_json = "1.0"
+serde_json = "=1.0.44"
+jmespath = "^0.2.0"
