--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ yaml-rust = "0.4"
 serde_json = "=1.0.44"
 jmespath = "^0.2.0"
 assert-json-diff = "1.0.3"
+jsonwebtoken = "7"
+serde = {version = "1.0", features = ["derive"] }
