--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ jmespath = "^0.2.0"
 assert-json-diff = "1.0.3"
 jsonwebtoken = "7"
 serde = {version = "1.0", features = ["derive"] }
+reqwest = { version = "0.10", features = ["blocking", "json"] }
