--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ assert-json-diff = "1.0.3"
 jsonwebtoken = "7"
 serde = {version = "1.0", features = ["derive"] }
 reqwest = { version = "0.10", features = ["blocking", "json"] }
+guid-create = "0.1.1"
