--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ jsonwebtoken = "7"
 serde = {version = "1.0", features = ["derive"] }
 reqwest = { version = "0.10", features = ["blocking", "json"] }
 guid-create = "0.1.1"
+indicatif = "0.14.0"
+prettytable-rs = "^0.8"
