--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ reqwest = { version = "0.10", features = ["blocking", "json"] }
 guid-create = "0.1.1"
 indicatif = "0.14.0"
 prettytable-rs = "^0.8"
+ansi_term = "0.12"
